--- a/apparteyment/Views/Shared/_Layout.cshtml
+++ b/apparteyment/Views/Shared/_Layout.cshtml
@@ -20,19 +20,19 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-2">
-                        <li class="nav-item">
+                        <li class="nav-item px-1">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item px-1">
                             <a class="nav-link" asp-area="" asp-controller="Contato" asp-action="Index">Contatos</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item px-1">
                             <a class="nav-link" asp-area="" asp-controller="Conta" asp-action="Index">Conta</a>
                         </li>
                         @* <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Logado">Logado</a>
                         </li> *@
-                        <li class="nav-item">
+                        <li class="nav-item px-1">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacidade</a>
                         </li>
                     </ul>
