tirando funcao apenas letras campos cadastro de nome

--- a/apparteyment/Views/Contato/Criar.cshtml
+++ b/apparteyment/Views/Contato/Criar.cshtml
@@ -10,7 +10,7 @@
 
         <label for="nome"><i class='bx bxs-user-circle'></i> Nome do Contato:</label>
         <input type="text" name="Nome" asp-for="Nome" class="nome" placeholder="ex: Jonas">
-        <p>Máximo: 20 caracteres e apenas letras</p>
+        <p>Máximo: 20 caracteres</p>
 
         <label for="email"><i class='bx bxs-envelope'></i> E-mail do Contato:</label>
         <input type="text" name="Email" asp-for="Email" class="email" placeholder="example@gmail.com">
