--- a/apparteyment/Views/Contato/Editar.cshtml
+++ b/apparteyment/Views/Contato/Editar.cshtml
@@ -9,7 +9,7 @@
 
         <label for="nome"><i class='bx bxs-user-circle'></i> Editar Nome do Contato:</label>
         <input type="text" name="Nome" class="nome" placeholder="ex: Jonas" value="@Model.Nome">
-        <p>Máximo: 20 caracteres e apenas letras</p>
+        <p>Máximo: 20 caracteres</p>
 
         <label for="email"><i class='bx bxs-envelope'></i> Editar E-mail do Contato:</label>
         <input type="text" name="Email" class="email" placeholder="example@gmail.com" value="@Model.Email">
