--- a/apparteyment/Views/Conta/EditarConta.cshtml
+++ b/apparteyment/Views/Conta/EditarConta.cshtml
@@ -30,7 +30,7 @@
     
             <label for="nome"><i class='bx bxs-user-circle'></i> Editar Nome:</label>
             <input type="text" name="" class="nome" placeholder="Edite seu nome aqui">
-            <p>Máximo: 20 caracteres e apenas letras</p>
+            <p>Máximo: 20 caracteres</p>
     
             <label for="telefone"><i class='bx bxs-phone'></i> Editar Telefone:</label>
             <input type="text" name="" class="telefone" placeholder="Edite seu telefone aqui">
