tela de loading

--- a/apparteyment/Views/Shared/_Layout.cshtml
+++ b/apparteyment/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="~/apparteyment.styles.css" asp-append-version="true" />
 </head>
 <body>
+    <div class="loader">
+    </div>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark">
             <div class="container-fluid">
