--- a/apparteyment/Views/Home/Index.cshtml
+++ b/apparteyment/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Página Inicial";
 }
 
-
+<!-- Colocar animação de Escrever ContactHub -->
 <div class="text-center">
     <h1 class="display-4">Contact<span id="hub">Hub</span></h1>
 </div>
