--- a/apparteyment/Views/Home/Index.cshtml
+++ b/apparteyment/Views/Home/Index.cshtml
@@ -4,12 +4,12 @@
 
 <!-- Colocar animação de Escrever ContactHub -->
 <div class="text-center">
-    <h1 class="display-4">Contact<span id="hub">Hub</span></h1>
+    <h1 class="display-4">Bem vindo ao <span id="contacthub"></span><span class="cursor">|</span></h1>
 </div>
 
 
 <section>
-    <div class="container">
+    <div class="container revela">
 
     <div class="demo">
         <div class="demo-left">
