--- a/apparteyment/Views/Shared/_Layout.cshtml
+++ b/apparteyment/Views/Shared/_Layout.cshtml
@@ -54,6 +54,7 @@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/baf95fc62f.js" crossorigin="anonymous"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
